# AccountabilityApp

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs  tracking.rs
src/components/: Widget.css  Widget.tsx
src/store/: useAppStore.ts
