[package]
name = "accountabilityapp"
version = "0.1.0"
description = "Accountability App - Track app/browser usage with AI chatbot analysis"
authors = ["you"]
edition = "2021"

[lib]
name = "accountabilityapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Activity tracking (Windows)
active-win-pos-rs = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1"

